--- a/Switcher/Base.lproj/Main.storyboard
+++ b/Switcher/Base.lproj/Main.storyboard
@@ -352,10 +352,10 @@
                     <window key="window" title="Switcher" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="597" y="381" width="480" height="270"/>
+                        <rect key="contentRect" x="597" y="381" width="550" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <value key="minSize" type="size" width="480" height="70"/>
-                        <value key="maxSize" type="size" width="480" height="800"/>
+                        <value key="minSize" type="size" width="500" height="70"/>
+                        <value key="maxSize" type="size" width="580" height="800"/>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -363,31 +363,31 @@
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="250"/>
+            <point key="canvasLocation" x="26.5" y="254"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="SWMainViewController" customModule="Switcher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="550" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="52" horizontalPageScroll="10" verticalLineScroll="52" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZfP-l1-ndQ">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                                <rect key="frame" x="0.0" y="0.0" width="550" height="270"/>
                                 <clipView key="contentView" id="dxd-3U-pSJ">
-                                    <rect key="frame" x="1" y="1" width="478" height="268"/>
+                                    <rect key="frame" x="1" y="1" width="548" height="268"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="50" viewBased="YES" id="x2S-le-PSg" customClass="SWMainTableView" customModule="Switcher" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="478" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="548" height="268"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <tableViewGridLines key="gridStyleMask" horizontal="YES"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="475" minWidth="40" maxWidth="1000" id="RbC-EH-zMi">
+                                                <tableColumn width="545" minWidth="40" maxWidth="1000" id="RbC-EH-zMi">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -401,7 +401,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView identifier="cell" id="8mA-IG-D5X" customClass="SWMainTableCellView" customModule="Switcher" customModuleProvider="target">
-                                                            <rect key="frame" x="1" y="1" width="475" height="50"/>
+                                                            <rect key="frame" x="1" y="1" width="545" height="50"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="ghP-7S-dN9">
@@ -413,7 +413,7 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Kzb-RL-9dH">
-                                                                    <rect key="frame" x="381" y="8" width="80" height="32"/>
+                                                                    <rect key="frame" x="448" y="7" width="80" height="32"/>
                                                                     <buttonCell key="cell" type="push" title="iTunes" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="LUe-Oi-Eyp">
                                                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                         <font key="font" metaFont="system"/>
@@ -423,7 +423,7 @@
                                                                     </connections>
                                                                 </button>
                                                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MDL-T4-O98">
-                                                                    <rect key="frame" x="280" y="8" width="101" height="32"/>
+                                                                    <rect key="frame" x="347" y="6" width="101" height="32"/>
                                                                     <buttonCell key="cell" type="push" title="App Store" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="hVn-Yu-8xH">
                                                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                         <font key="font" metaFont="system"/>
@@ -432,14 +432,26 @@
                                                                         <action selector="loginAppStore:" target="8mA-IG-D5X" id="7zk-EZ-NCe"/>
                                                                     </connections>
                                                                 </button>
+                                                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="R9h-0Q-L2F">
+                                                                    <rect key="frame" x="266" y="7" width="81" height="32"/>
+                                                                    <buttonCell key="cell" type="push" title="iBooks" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="zdz-bs-GVO">
+                                                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                                        <font key="font" metaFont="system"/>
+                                                                    </buttonCell>
+                                                                    <connections>
+                                                                        <action selector="loginiBooks:" target="8mA-IG-D5X" id="WFT-QK-dSz"/>
+                                                                    </connections>
+                                                                </button>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="Kzb-RL-9dH" secondAttribute="trailing" constant="20" symbolic="YES" id="7p8-mP-Nlp"/>
-                                                                <constraint firstItem="Kzb-RL-9dH" firstAttribute="centerY" secondItem="8mA-IG-D5X" secondAttribute="centerY" id="8ya-MU-d45"/>
-                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="leading" secondItem="8mA-IG-D5X" secondAttribute="leading" constant="20" symbolic="YES" id="M8f-df-ZhA"/>
-                                                                <constraint firstItem="Kzb-RL-9dH" firstAttribute="leading" secondItem="MDL-T4-O98" secondAttribute="trailing" constant="12" id="Md1-RT-Gqb"/>
-                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="centerY" secondItem="8mA-IG-D5X" secondAttribute="centerY" id="Sgd-GS-D3h"/>
-                                                                <constraint firstItem="MDL-T4-O98" firstAttribute="baseline" secondItem="Kzb-RL-9dH" secondAttribute="baseline" id="Xzf-jG-1OH"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Kzb-RL-9dH" secondAttribute="trailing" constant="23" id="C3c-sA-gyL"/>
+                                                                <constraint firstItem="Kzb-RL-9dH" firstAttribute="leading" secondItem="MDL-T4-O98" secondAttribute="trailing" constant="12" symbolic="YES" id="DfP-06-9AD"/>
+                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="centerY" secondItem="8mA-IG-D5X" secondAttribute="centerY" id="I9a-1p-SZA"/>
+                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="top" secondItem="MDL-T4-O98" secondAttribute="top" id="NnH-w3-rLG"/>
+                                                                <constraint firstItem="MDL-T4-O98" firstAttribute="leading" secondItem="R9h-0Q-L2F" secondAttribute="trailing" constant="12" symbolic="YES" id="QLI-2f-JYg"/>
+                                                                <constraint firstItem="R9h-0Q-L2F" firstAttribute="baseline" secondItem="Kzb-RL-9dH" secondAttribute="baseline" id="syP-iL-0Ee"/>
+                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="leading" secondItem="8mA-IG-D5X" secondAttribute="leading" constant="20" id="wTQ-Vw-2DK"/>
+                                                                <constraint firstItem="ghP-7S-dN9" firstAttribute="baseline" secondItem="R9h-0Q-L2F" secondAttribute="baseline" id="yoU-pM-kcl"/>
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="emailTextField" destination="ghP-7S-dN9" id="FS1-in-LuO"/>
@@ -457,8 +469,8 @@
                                     </subviews>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="HC2-qH-xbC">
-                                    <rect key="frame" x="1" y="99" width="196" height="16"/>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="HC2-qH-xbC">
+                                    <rect key="frame" x="1" y="253" width="548" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="ysK-jq-Oqu">
@@ -490,7 +502,7 @@
                     </items>
                 </menu>
             </objects>
-            <point key="canvasLocation" x="75" y="674"/>
+            <point key="canvasLocation" x="26" y="794"/>
         </scene>
     </scenes>
 </document>
